@@ -1,11 +1,17 @@
 partman-base (118) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * init.d/parted: minor code improvements.
   * Apply patch by Ian Campbell and Ferenc Wagner to improve display of Xen
     virtual disks in partman. With thanks to both. Closes: #474556.
   * In lowmem mode it is possible that newly loaded support for a file system
     is not "seen" because depmod has not been run after loading the kernel
     udeb. Therefore, run depmod when partman is started.
+
+  [ Evan Dandrea ]
+  * Disable swap on all the swap partitions for the device being changed,
+    rather than just the ones that will exist after partitioning
+    (LP: #218394).
 
  -- Frans Pop <fjp@debian.org>  Wed, 30 Apr 2008 02:34:56 +0200
 
